[package]
name = "rkd-high-frequency-trading"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.14"
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
url = "2.5"
chrono = "0.4"
futures = "0.3"
prettytable = "0.10"
rand = "0.8"
